--- a/app.json
+++ b/app.json
@@ -7,7 +7,8 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle": "black"
+    "navigationBarTitleText": "CNodePlus",
+    "navigationBarTextStyle": "black",
+    "enablePullDownRefresh": true
   }
 }
